--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.1",
       "dotenv": "^16.4.5",
-      "drizzle-orm": "^0.31.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rxjs": "^7.8.1",
@@ -60,7 +59,7 @@
       "ts-loader": "^9.4.3",
       "ts-node": "10.9.1",
       "tsconfig-paths": "^4.2.0",
-      "typescript": "4.5.2",
+      "typescript": "^5.4.5",
       "webpack": "^5.91.0",
       "webpack-node-externals": "^3.0.0"
    },
